--- a/ks.cfg
+++ b/ks.cfg
@@ -8,7 +8,7 @@ keyboard --xlayouts='us'
 lang en_US.UTF-8
 
 # Use network installation
-url --url="http://repo.almalinux.org/almalinux/9.5/BaseOS/x86_64/os"
+url --url="https://repo.almalinux.org/almalinux/9.5/BaseOS/x86_64/os"
 
 # Clear the Master Boot Record
 zerombr
@@ -19,9 +19,8 @@ clearpart --all --initlabel
 # Pre-installation script to detect SSDs 
 %pre 
 #!/bin/bash 
-
-# Find the first two SSDs by checking rotational speed 
-SSD_DISKS=($(lsblk -d -o name,rota | grep ' 1' | awk '{print $1}' | head -n 2)) 
+# Find the first two SSDs by checking rotational flag
+SSD_DISKS=($(lsblk -d -o name,rota,type | grep ' 0 disk'| grep -v 'ram' | awk '{print $1}' | head -n 2)) 
 
 # Check if two SSDs were found 
 if [ "${#SSD_DISKS[@]}" -lt 2 ]; then 
@@ -29,38 +28,19 @@ if [ "${#SSD_DISKS[@]}" -lt 2 ]; then
  exit 1 
 fi 
  
-# Set the SSD disks as kickstart variables 
-echo "SSD_DISK1=${SSD_DISKS[0]}" > /tmp/ssd_disks 
-echo "SSD_DISK2=${SSD_DISKS[1]}" >> /tmp/ssd_disks 
-%end 
+# Generate partitioning file
+echo "part raid.01 --size=600 --ondisk=${SSD_DISKS[0]} --fstype=\"mdmember\"" > /tmp/partitioning.cfg 
+echo "part raid.02 --size=600 --ondisk=${SSD_DISKS[1]} --fstype=\"mdmember\"" >> /tmp/partitioning.cfg
+echo "part raid.11 --size=1024 --ondisk=${SSD_DISKS[0]} --fstype=\"mdmember\"" >> /tmp/partitioning.cfg
+echo "part raid.12 --size=1024 --ondisk=${SSD_DISKS[1]} --fstype=\"mdmember\"" >> /tmp/partitioning.cfg
+echo "part raid.21 --size=16200 --ondisk=${SSD_DISKS[0]} --fstype=\"mdmember\"" >> /tmp/partitioning.cfg
+echo "part raid.22 --size=16200 --ondisk=${SSD_DISKS[1]} --fstype=\"mdmember\"" >> /tmp/partitioning.cfg 
+%end
 
-# Include the SSD disks variables 
-%include /tmp/ssd_disks 
+%packages
+@^server-product-environment
 
-# Partitioning with RAID 1 
-part raid.01 --size=600 --ondisk=$SSD_DISK1 --fstype="mdmember"
-part raid.02 --size=600 --ondisk=$SSD_DISK2 --fstype="mdmember"
-part raid.11 --size=1024 --ondisk=$SSD_DISK1 --fstype="mdmember" 
-part raid.12 --size=1024 --ondisk=$SSD_DISK2 --fstype="mdmember" 
-part raid.21 --size=51200 --ondisk=$SSD_DISK1 --fstype="mdmember" 
-part raid.22 --size=51200 --ondisk=$SSD_DISK2 --fstype="mdmember" 
-
-# RAID setup 
-raid /boot/efi --fstype="efi" --fsoptions="umask=0077,shortname=winnt" --level=1 --device=md0 raid.01 raid.02
-raid /boot --fstype=ext4 --level=1 --device=md1 raid.11 raid.12 
-raid / --fstype=ext4 --level=1 --device=md2 raid.21 raid.22 
-
-# Configure the bootloader.
-bootloader --location=partition
-
-# System timezone
-timesource --ntp-server time.google.com
-timesource --ntp-server time1.google.com
-timesource --ntp-server time2.google.com
-timezone --utc
-
-# Root password
-rootpw --allow-ssh --iscrypted $6$xzli4sU84KZMo7Aj$BDCqQ4wIMSYUDfh8GIdO7KomInCZDLwIxo.Z6//Nmui91RDHoizWgQmPW2TwGqQ3wUrLTBY06CH0KVw7KYAMR0
+%end
 
 # Do not configure the X Window System
 skipx
@@ -68,3 +48,17 @@ skipx
 # Reboot after installation
 reboot
 
+# Include and run partitioning file
+%include /tmp/partitioning.cfg
+
+# RAID setup 
+raid / --device=root --fstype="xfs" --level=RAID1 raid.21 raid.22
+raid /boot --device=boot --fstype="ext4" --level=RAID1 raid.11 raid.12
+raid /boot/efi --device=boot_efi --fstype="efi" --level=RAID1 --fsoptions="umask=0077,shortname=winnt" raid.01 raid.02
+
+# System timezone
+timezone America/New_York --utc
+timesource --ntp-server time.google.com
+
+# Root password
+rootpw --allow-ssh --iscrypted $6$xzli4sU84KZMo7Aj$BDCqQ4wIMSYUDfh8GIdO7KomInCZDLwIxo.Z6//Nmui91RDHoizWgQmPW2TwGqQ3wUrLTBY06CH0KVw7KYAMR0
