ks.cfg add --erroronfail flag to pre script

--- a/ks.cfg
+++ b/ks.cfg
@@ -17,7 +17,7 @@ zerombr
 clearpart --all --initlabel
 
 # Pre-installation script to detect SSDs 
-%pre 
+%pre --erroronfail
 #!/bin/bash 
 # Find the first two SSDs by checking rotational flag
 SSD_DISKS=($(lsblk -d -o name,rota,type | grep ' 0 disk'| grep -v 'ram' | awk '{print $1}' | head -n 2)) 
