ks.cfg redirect pre sript error message to tty1

--- a/ks.cfg
+++ b/ks.cfg
@@ -24,7 +24,7 @@ SSD_DISKS=($(lsblk -d -o name,rota,type | grep ' 0 disk'| grep -v 'ram' | awk '{
 
 # Check if two SSDs were found 
 if [ "${#SSD_DISKS[@]}" -lt 2 ]; then 
- echo "Error: Less than two SSDs found."
+ echo "Error: Less than two SSDs found." > /dev/tty1 
  exit 1 
 fi 
  
