--- a/ks.cfg
+++ b/ks.cfg
@@ -38,6 +38,12 @@ echo "part raid.21 --size=16200 --ondisk=${SSD_DISKS[0]} --fstype=\"mdmember\"" 
 echo "part raid.22 --size=16200 --ondisk=${SSD_DISKS[1]} --fstype=\"mdmember\"" >> /tmp/partitioning.cfg 
 %end
 
+%onerror
+ #!/bin/bash                                                                                                                                                                               
+ echo "Error: Installation requires at least 2 SSDs, but only $SSD_COUNT found."
+ read -p "Press any key to continue "
+%end
+
 %packages
 @^server-product-environment
 
