ks.cfg use log file to prescript

--- a/ks.cfg
+++ b/ks.cfg
@@ -24,8 +24,8 @@ SSD_DISKS=($(lsblk -d -o name,rota,type | grep ' 0 disk'| grep -v 'ram' | awk '{
 
 # Check if two SSDs were found 
 if [ "${#SSD_DISKS[@]}" -lt 2 ]; then 
- lsblk > /dev/tty2
- echo "Error: Less than two SSDs found." > /dev/tty2
+ lsblk > /tmp/pre-script.log 
+ echo "Error: Less than two SSDs found." >> /tmp/pre-script.log 
  exit 1 
 fi 
  
@@ -36,12 +36,6 @@ echo "part raid.11 --size=1024 --ondisk=${SSD_DISKS[0]} --fstype=\"mdmember\"" >
 echo "part raid.12 --size=1024 --ondisk=${SSD_DISKS[1]} --fstype=\"mdmember\"" >> /tmp/partitioning.cfg
 echo "part raid.21 --size=16200 --ondisk=${SSD_DISKS[0]} --fstype=\"mdmember\"" >> /tmp/partitioning.cfg
 echo "part raid.22 --size=16200 --ondisk=${SSD_DISKS[1]} --fstype=\"mdmember\"" >> /tmp/partitioning.cfg 
-%end
-
-%onerror
- #!/bin/bash                                                                                                                                                                               
- echo "Error: Installation requires at least 2 SSDs, but only $SSD_COUNT found."
- read -p "Press any key to continue "
 %end
 
 %packages
