ks.cfg multiple timesource

--- a/ks.cfg
+++ b/ks.cfg
@@ -59,6 +59,9 @@ raid / --device=root --fstype="xfs" --level=RAID1 raid.21 raid.22
 
 # System timezone
 timezone America/New_York --utc
+timesource --ntp-server time1.google.com
+timesource --ntp-server time2.google.com
+timesource --ntp-server time3.google.com
 timesource --ntp-server time.google.com
 
 # Root password
