--- a/ks.cfg
+++ b/ks.cfg
@@ -30,12 +30,12 @@ if [ "${#SSD_DISKS[@]}" -lt 2 ]; then
 fi 
  
 # Generate partitioning file
-echo "part raid.01 --size=600 --asprimary --ondisk=${SSD_DISKS[0]} --fstype=\"mdmember\"" > /tmp/partitioning.cfg
-echo "part raid.02 --size=600 --asprimary --ondisk=${SSD_DISKS[1]} --fstype=\"mdmember\"" >> /tmp/partitioning.cfg
-echo "part raid.11 --size=1024 --asprimary --ondisk=${SSD_DISKS[0]} --fstype=\"mdmember\"" >> /tmp/partitioning.cfg
-echo "part raid.12 --size=1024 --asprimary --ondisk=${SSD_DISKS[1]} --fstype=\"mdmember\"" >> /tmp/partitioning.cfg
-echo "part raid.21 --size=16200 --asprimary --ondisk=${SSD_DISKS[0]} --fstype=\"mdmember\"" > /tmp/partitioning.cfg
-echo "part raid.22 --size=16200 --asprimary --ondisk=${SSD_DISKS[1]} --fstype=\"mdmember\"" >> /tmp/partitioning.cfg
+echo "part raid.01 --size=600 --start=0 --ondisk=${SSD_DISKS[0]} --fstype=\"mdmember\"" > /tmp/partitioning.cfg
+echo "part raid.02 --size=600 --start=0 --ondisk=${SSD_DISKS[1]} --fstype=\"mdmember\"" >> /tmp/partitioning.cfg
+echo "part raid.11 --size=1024 --ondisk=${SSD_DISKS[0]} --fstype=\"mdmember\"" >> /tmp/partitioning.cfg
+echo "part raid.12 --size=1024 --ondisk=${SSD_DISKS[1]} --fstype=\"mdmember\"" >> /tmp/partitioning.cfg
+echo "part raid.21 --size=16200 --ondisk=${SSD_DISKS[0]} --fstype=\"mdmember\"" > /tmp/partitioning.cfg
+echo "part raid.22 --size=16200 --ondisk=${SSD_DISKS[1]} --fstype=\"mdmember\"" >> /tmp/partitioning.cfg
 %end
 
 %packages
