--- a/ks.cfg
+++ b/ks.cfg
@@ -53,9 +53,9 @@ reboot
 %include /tmp/partitioning.cfg
 
 # RAID setup
-raid /boot/efi --device=md1 --fstype="efi" --chunksize=64K --level=RAID1 --fsoptions="umask=0077,shortname=winnt" raid.11 raid.12
-raid /boot --device=md2 --fstype="ext4" --chunksize=64K --level=RAID1 raid.21 raid.22
-raid / --device=md3 --fstype="xfs" --chunksize=64K --level=RAID1 raid.31 raid.32
+raid /boot/efi --device=md1 --fstype="efi" --chunksize=64 --level=RAID1 --fsoptions="umask=0077,shortname=winnt" raid.11 raid.12
+raid /boot --device=md2 --fstype="ext4" --chunksize=64 --level=RAID1 raid.21 raid.22
+raid / --device=md3 --fstype="xfs" --chunksize=64 --level=RAID1 raid.31 raid.32
 
 # System timezone
 timezone America/New_York --utc
