zero superblock ks.cfg

--- a/ks.cfg
+++ b/ks.cfg
@@ -18,7 +18,13 @@ clearpart --all --initlabel
 
 # Pre-installation script to detect SSDs 
 %pre --erroronfail
-#!/bin/bash 
+#!/bin/bash
+
+# Identify all disk devices                                                                                                                                                                                                                       
+for disk in $(lsblk -dpno NAME | grep -E '/dev/sd|/dev/nvme|/dev/vd'); do
+    # Zero the mdadm superblock if present
+    mdadm --zero-superblock $disk
+
 # Find the first two SSDs by checking rotational flag
 SSD_DISKS=($(lsblk -d -o name,rota,type | grep ' 0 disk'| grep -v 'ram' | awk '{print $1}' | head -n 2)) 
 
