--- a/ks.cfg
+++ b/ks.cfg
@@ -23,7 +23,7 @@ clearpart --all --initlabel
 # Identify all disk devices                                                                                                                                                                                                                       
 for disk in $(lsblk -dpno NAME | grep -E '/dev/sd|/dev/nvme|/dev/vd'); do
     # Zero the mdadm superblock if present
-    mdadm --zero-superblock $disk || true
+    mdadm --zero-superblock $disk > /tmp/zero.log 
 
 # Find the first two SSDs by checking rotational flag
 SSD_DISKS=($(lsblk -d -o name,rota,type | grep ' 0 disk'| grep -v 'ram' | awk '{print $1}' | head -n 2)) 
