--- a/ks.cfg
+++ b/ks.cfg
@@ -19,18 +19,19 @@ clearpart --all --initlabel
 # Pre-installation script to detect SSDs 
 %pre --erroronfail
 #!/bin/bash
+echo "Start pre-script..." > /tmp/pre-script.log 
 
 # Identify all disk devices                                                                                                                                                                                                                       
 for disk in $(lsblk -dpno NAME | grep -E '/dev/sd|/dev/nvme|/dev/vd'); do
     # Zero the mdadm superblock if present
-    mdadm --zero-superblock $disk > /tmp/zero.log 
+    mdadm --zero-superblock $disk >> /tmp/pre-script.log
 
 # Find the first two SSDs by checking rotational flag
 SSD_DISKS=($(lsblk -d -o name,rota,type | grep ' 0 disk'| grep -v 'ram' | awk '{print $1}' | head -n 2)) 
 
 # Check if two SSDs were found 
 if [ "${#SSD_DISKS[@]}" -lt 2 ]; then 
- lsblk -d > /tmp/pre-script.log 
+ lsblk -d >> /tmp/pre-script.log 
  echo "Error: Less than two SSDs found." >> /tmp/pre-script.log 
  exit 1 
 fi 
