--- a/ks.cfg
+++ b/ks.cfg
@@ -31,7 +31,7 @@ SSD_DISKS=($(lsblk -d -o name,rota,type | grep ' 0 disk'| grep -v 'ram' | awk '{
 
 # Check if two SSDs were found 
 if [ "${#SSD_DISKS[@]}" -lt 2 ]; then 
- lsblk -d >> /tmp/pre-script.log 
+ lsblk -d -o name,rota,type >> /tmp/pre-script.log 
  echo "Error: Less than two SSDs found." >> /tmp/pre-script.log 
  exit 1 
 fi 
