--- a/ks.cfg
+++ b/ks.cfg
@@ -24,7 +24,7 @@ echo "Start pre-script..." > /tmp/pre-script.log
 # Identify all disk devices                                                                                                                                                                                                                       
 for disk in $(lsblk -dpno NAME | grep -E '/dev/sd|/dev/nvme|/dev/vd'); do
     # Zero the mdadm superblock if present
-    mdadm --zero-superblock $disk >> /tmp/pre-script.log
+    mdadm --zero-superblock $disk &>> /tmp/pre-script.log
 
 # Find the first two SSDs by checking rotational flag
 SSD_DISKS=($(lsblk -d -o name,rota,type | grep ' 0 disk'| grep -v 'ram' | awk '{print $1}' | head -n 2)) 
