--- a/ks.cfg
+++ b/ks.cfg
@@ -21,10 +21,10 @@ clearpart --all --initlabel
 #!/bin/bash
 echo "Start pre-script..." > /tmp/pre-script.log 
 
-# Identify all disk devices                                                                                                                                                                                                                       
-for disk in $(lsblk -dpno NAME | grep -E '/dev/sd|/dev/nvme|/dev/vd'); do
+# Identify all partition devices
+for partition in $(lsblk -lnpo NAME,TYPE | awk '$2=="part" {print $1}'); do
     # Zero the mdadm superblock if present
-    mdadm --zero-superblock $disk &>> /tmp/pre-script.log
+    mdadm --zero-superblock $partition &>> /tmp/pre-script.log
 
 # Find the first two SSDs by checking rotational flag
 SSD_DISKS=($(lsblk -d -o name,rota,type | grep ' 0 disk'| grep -v 'ram' | awk '{print $1}' | head -n 2)) 
