Abort changes ks.cfg

--- a/ks.cfg
+++ b/ks.cfg
@@ -19,19 +19,12 @@ clearpart --all --initlabel
 # Pre-installation script to detect SSDs 
 %pre --erroronfail
 #!/bin/bash
-echo "Start pre-script..." > /tmp/pre-script.log 
-
-# Identify all partition devices
-for partition in $(lsblk -lnpo NAME,TYPE | awk '$2=="part" {print $1}'); do
-    # Zero the mdadm superblock if present
-    mdadm --zero-superblock $partition &>> /tmp/pre-script.log
-
 # Find the first two SSDs by checking rotational flag
 SSD_DISKS=($(lsblk -d -o name,rota,type | grep ' 0 disk'| grep -v 'ram' | awk '{print $1}' | head -n 2)) 
 
 # Check if two SSDs were found 
 if [ "${#SSD_DISKS[@]}" -lt 2 ]; then 
- lsblk -d -o name,rota,type >> /tmp/pre-script.log 
+ lsblk -d -o name,rota,type > /tmp/pre-script.log 
  echo "Error: Less than two SSDs found." >> /tmp/pre-script.log 
  exit 1 
 fi 
