Sort disks, clearpart only system drives ks.cfg

--- a/ks.cfg
+++ b/ks.cfg
@@ -10,17 +10,11 @@ lang en_US.UTF-8
 # Use network installation
 url --url="https://repo.almalinux.org/almalinux/9.5/BaseOS/x86_64/os"
 
-# Clear the Master Boot Record
-zerombr
-
-# Partition clearing information
-clearpart --all --initlabel
-
 # Pre-installation script to detect SSDs 
 %pre --erroronfail
 #!/bin/bash
 # Find the first two SSDs by checking rotational flag
-SSD_DISKS=($(lsblk -d -o name,rota,type | grep ' 0 disk'| grep -v 'ram' | awk '{print $1}' | head -n 2)) 
+SSD_DISKS=($(lsblk -d -o name,rota,type | grep ' 0 disk'| grep -v 'ram' | awk '{print $1}' | sort | head -n 2)) 
 
 # Check if two SSDs were found 
 if [ "${#SSD_DISKS[@]}" -lt 2 ]; then 
@@ -28,14 +22,17 @@ if [ "${#SSD_DISKS[@]}" -lt 2 ]; then
  echo "Error: Less than two SSDs found." >> /tmp/pre-script.log 
  exit 1 
 fi 
- 
+
+# Partition clearing information
+DRIVES=$(IFS=, ; echo "${SSD_DISKS[*]}")
 # Generate partitioning file
-echo "part raid.11 --size=600 --asprimary --ondisk=${SSD_DISKS[0]} --fstype=\"mdmember\"" > /tmp/partitioning.cfg
+echo "clearpart --drives=${DRIVES} --all --initlabel" > /tmp/partitioning.cfg
+echo "part raid.11 --size=600 --asprimary --ondisk=${SSD_DISKS[0]} --fstype=\"mdmember\"" >> /tmp/partitioning.cfg
 echo "part raid.12 --size=600 --asprimary --ondisk=${SSD_DISKS[1]} --fstype=\"mdmember\"" >> /tmp/partitioning.cfg
 echo "part raid.21 --size=1024 --asprimary --ondisk=${SSD_DISKS[0]} --fstype=\"mdmember\"" >> /tmp/partitioning.cfg
 echo "part raid.22 --size=1024 --asprimary --ondisk=${SSD_DISKS[1]} --fstype=\"mdmember\"" >> /tmp/partitioning.cfg
-echo "part raid.31 --size=51200 --ondisk=${SSD_DISKS[0]} --fstype=\"mdmember\"" >> /tmp/partitioning.cfg
-echo "part raid.32 --size=51200 --ondisk=${SSD_DISKS[1]} --fstype=\"mdmember\"" >> /tmp/partitioning.cfg
+echo "part raid.31 --size=16200 --ondisk=${SSD_DISKS[0]} --fstype=\"mdmember\"" >> /tmp/partitioning.cfg
+echo "part raid.32 --size=16200 --ondisk=${SSD_DISKS[1]} --fstype=\"mdmember\"" >> /tmp/partitioning.cfg
 %end
 
 %packages
