Log file path fix

--- a/ks.cfg
+++ b/ks.cfg
@@ -14,7 +14,7 @@ url --url="https://repo.almalinux.org/almalinux/9.5/BaseOS/x86_64/os"
 %pre --erroronfail
 #!/bin/bash
 # Log file path
-LOGFILE="/root/pre-script.log"
+LOGFILE="pre-script.log"
 
 # Create or clear the log file
 : > "$LOGFILE"
