--- a/ks.cfg
+++ b/ks.cfg
@@ -19,6 +19,19 @@ LOGFILE="pre-script.log"
 # Create or clear the log file
 : > "$LOGFILE"
 
+# Find all MD devices manually and stop them one by one
+echo "Stopping all MD devices found in /dev/..." | tee -a "$LOGFILE"
+for md_device in $(ls /dev/ | grep '^md[0-9]\+'); do
+    echo "Stopping /dev/$md_device..." | tee -a "$LOGFILE"
+    mdadm --stop "/dev/$md_device" >> "$LOGFILE" 2>&1
+
+    if [ $? -eq 0 ]; then
+        echo "Successfully stopped /dev/$md_device." | tee -a "$LOGFILE"
+    else
+        echo "Failed to stop /dev/$md_device." | tee -a "$LOGFILE"
+    fi
+done
+
 # List all partitions
 PARTITIONS=$(lsblk -lnp -o NAME | grep -E '/dev/sd|/dev/nvme')
 
