try config log file name ks.cfg

--- a/ks.cfg
+++ b/ks.cfg
@@ -11,11 +11,8 @@ lang en_US.UTF-8
 url --url="https://repo.almalinux.org/almalinux/9.5/BaseOS/x86_64/os"
 
 # Pre-installation script to detect SSDs 
-%pre --erroronfail
+%pre --erroronfail --log=pre-script.log
 #!/bin/bash
-# Log file path
-LOGFILE="pre-script.log"
-
 # Create or clear the log file
 : > "$LOGFILE"
 
