--- a/ks.cfg
+++ b/ks.cfg
@@ -13,6 +13,9 @@ url --url="https://repo.almalinux.org/almalinux/9.5/BaseOS/x86_64/os"
 # Pre-installation script to detect SSDs 
 %pre --erroronfail --log=pre-script.log
 #!/bin/bash
+# Log file path
+LOGFILE="/root/pre-script.log"
+
 # Create or clear the log file
 : > "$LOGFILE"
 
