--- a/ks.cfg
+++ b/ks.cfg
@@ -11,10 +11,10 @@ lang en_US.UTF-8
 url --url="https://repo.almalinux.org/almalinux/9.5/BaseOS/x86_64/os"
 
 # Pre-installation script to detect SSDs 
-%pre --erroronfail --log=pre-script.log
+%pre --erroronfail
 #!/bin/bash
 # Log file path
-LOGFILE="/root/pre-script.log"
+LOGFILE="/tmp/pre-script.log"
 
 # Create or clear the log file
 : > "$LOGFILE"
