--- a/ks.cfg
+++ b/ks.cfg
@@ -63,7 +63,7 @@ echo "MD data cleared." | tee -a "$LOGFILE"
  
 # Find the first two SSDs by checking the rotational flag
 echo "Detecting SSD devices..." | tee -a "$LOGFILE"
-SSD_DISKS=($(lsblk -d -o name,rota,type | grep ' 0 disk' | grep -v 'ram' | awk '{print $1}' | sort | head -n 2))
+SSD_DISKS=($(lsblk -d -o name,rota,type | grep ' 0 disk' | grep -v 'ram' | awk '{print $1}' | sort ))
 
 # Log the detected SSDs
 echo "Detected SSDs: ${SSD_DISKS[*]}" | tee -a "$LOGFILE"
