--- a/ks.cfg
+++ b/ks.cfg
@@ -10,6 +10,8 @@ lang en_US.UTF-8
 # Use network installation
 url --url="https://repo.almalinux.org/almalinux/9.5/BaseOS/x86_64/os"
 
+zerombr
+
 # Pre-installation script to detect SSDs 
 %pre --erroronfail
 #!/bin/bash
