zero by ddks.cfg

--- a/ks.cfg
+++ b/ks.cfg
@@ -52,13 +52,7 @@ for partition in $PARTITIONS; do
         echo "RAID metadata found on $partition. Zeroing superblock..." | tee -a "$LOGFILE"
 
         # Zero the superblock
-        mdadm --zero-superblock "$partition" >> "$LOGFILE" 2>&1
-
-        if [ $? -eq 0 ]; then
-            echo "Successfully zeroed superblock on $partition." | tee -a "$LOGFILE"
-        else
-            echo "Failed to zero superblock on $partition." | tee -a "$LOGFILE"
-        fi
+        dd if=/dev/zero of="$partition" bs=1M count=100
     fi
 done
 
