--- a/ks.cfg
+++ b/ks.cfg
@@ -51,8 +51,8 @@ for partition in $PARTITIONS; do
     else
         echo "RAID metadata found on $partition. Zeroing superblock..." | tee -a "$LOGFILE"
 
-        # Zero the superblock
-        dd if=/dev/zero of="$partition" bs=1M count=100
+        # Zero the superblock first 4kb
+        dd if=/dev/zero of="$partition" bs=512 count=8192
     fi
 done
 
