production ks.cfg

--- a/ks.cfg
+++ b/ks.cfg
@@ -51,8 +51,14 @@ for partition in $PARTITIONS; do
     else
         echo "RAID metadata found on $partition. Zeroing superblock..." | tee -a "$LOGFILE"
 
-        # Zero the superblock first 4kb
-        dd if=/dev/zero of="$partition" bs=512 count=8192
+        # Zero the superblock
+        mdadm --zero-superblock "$partition" >> "$LOGFILE" 2>&1
+
+        if [ $? -eq 0 ]; then
+            echo "Successfully zeroed superblock on $partition." | tee -a "$LOGFILE"
+        else
+            echo "Failed to zero superblock on $partition." | tee -a "$LOGFILE"
+        fi
     fi
 done
 
@@ -83,7 +89,7 @@ if [ "${#SSD_DISKS[@]}" -eq 1 ]; then
     echo "clearpart --drives=${SSD_DISKS[0]} --all --initlabel" > /tmp/partitioning.cfg
     echo "part /boot/efi --size=600 --asprimary --ondisk=${SSD_DISKS[0]} --fstype=\"efi\" --fsoptions=\"umask=0077,shortname=winnt\"" >> /tmp/partitioning.cfg
     echo "part /boot --size=1024 --asprimary --ondisk=${SSD_DISKS[0]} --fstype=\"ext4\"" >> /tmp/partitioning.cfg
-    echo "part / --size=16200 --ondisk=${SSD_DISKS[0]} --fstype=\"xfs\"" >> /tmp/partitioning.cfg
+    echo "part / --size=51200 --ondisk=${SSD_DISKS[0]} --fstype=\"xfs\"" >> /tmp/partitioning.cfg
 
     echo "Partitioning setup for a single SSD completed." | tee -a "$LOGFILE"
 else
@@ -93,8 +99,8 @@ else
     echo "part raid.12 --size=600 --asprimary --ondisk=${SSD_DISKS[1]} --fstype=\"mdmember\"" >> /tmp/partitioning.cfg
     echo "part raid.21 --size=1024 --asprimary --ondisk=${SSD_DISKS[0]} --fstype=\"mdmember\"" >> /tmp/partitioning.cfg
     echo "part raid.22 --size=1024 --asprimary --ondisk=${SSD_DISKS[1]} --fstype=\"mdmember\"" >> /tmp/partitioning.cfg
-    echo "part raid.31 --size=16200 --ondisk=${SSD_DISKS[0]} --fstype=\"mdmember\"" >> /tmp/partitioning.cfg
-    echo "part raid.32 --size=16200 --ondisk=${SSD_DISKS[1]} --fstype=\"mdmember\"" >> /tmp/partitioning.cfg
+    echo "part raid.31 --size=51200 --ondisk=${SSD_DISKS[0]} --fstype=\"mdmember\"" >> /tmp/partitioning.cfg
+    echo "part raid.32 --size=51200 --ondisk=${SSD_DISKS[1]} --fstype=\"mdmember\"" >> /tmp/partitioning.cfg
 
     # RAID setup
     echo "raid /boot/efi --device=md1 --fstype=\"efi\" --level=RAID1 --fsoptions=\"umask=0077,shortname=winnt\" raid.11 raid.12" >> /tmp/partitioning.cfg
