--- a/ks.cfg
+++ b/ks.cfg
@@ -73,7 +73,7 @@ echo "Detected SSDs: ${SSD_DISKS[*]}" | tee -a "$LOGFILE"
 
 # Check if at least one SSD was found
 if [ "${#SSD_DISKS[@]}" -lt 1 ]; then
-    lsblk -d -o name,rota,type >> "$LOGFILE" 2>&1
+    lsblk -d -o name,rota,rm,type >> "$LOGFILE" 2>&1
     echo "Error: No SSDs found." | tee -a "$LOGFILE"
     exit 1
 fi
