Update ks.cfg disable install on nvme

--- a/ks.cfg
+++ b/ks.cfg
@@ -36,7 +36,7 @@ for md_device in $(ls /dev/ | grep '^md[0-9]\+'); do
 done
 
 # List all partitions
-PARTITIONS=$(lsblk -lnp -o NAME | grep -E '/dev/sd|/dev/nvme')
+PARTITIONS=$(lsblk -lnp -o NAME | grep -E '/dev/sd')
 
 echo "Checking partitions for RAID metadata..." | tee -a "$LOGFILE"
 
